# attic

./: LICENSE.txt  README.md
unsorted/cpp-ipc-test/: CMakeLists.txt  main.cpp  runme  runme1
unsorted/cpp-ipc-test/ipclib/: CMakeLists.txt
unsorted/cpp-ipc-test/ipclib/include/ipclib/: AsioQueue.h  Queue.h  SharedMemory.h
unsorted/cpp-ipc-test/ipclib/src/: AsioQueue.cpp  Queue.cpp  SharedMemory.cpp
unsorted/cpp-linux-driver/: LICENSE  run  test.cpp
unsorted/cpp-linux-driver/ko/: Makefile  build.sh  uwcajoy.c
unsorted/cpp-xglwall/: README.md  example.c  run.sh  sobuild.sh  sorun.sh  xglwall.c  xglwall.h  xglwall.pro
unsorted/haskell-console-rain/: Main.hs  README.md  TermAnsi.hs  TermGraphics.hs  TermIO.hs  Utils.hs  run
unsorted/rust-charwall/: Cargo.toml  README.md  build.rs  init.tga
unsorted/rust-charwall/src/: drawer.rs  drawer_life.rs  main.rs  xglwall.rs
unsorted/webrtc-ffmpeg-cam/: .gitignore  README.md  ffrtc.html  ffrtc.js  go.mod  go.sum  main.go  oes.sh  oes2.sh  runme.sh
